# agent-deploy-awscopilot

./: 101readme.md  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: server.py
copilot/: manifest.yml
copilot/ai-agent/: bedrock-policy.yml
