[tool.poetry]
name = "demo-agent-deploy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = ">=2,<3"
langchain-core = "^0.3.68"
langgraph = "^0.5.2"
langchain = "^0.3.26"
langchain-aws = "^0.2.28"
langchain-community = "^0.3.27"
langchain-pinecone = "^0.2.8"
boto3 = "^1.39.4"
langchain-cli = "^0.0.36"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
